# video-meta-info-to-yaml

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
src/: Context.h  main.cpp  utils.h
